# OllamaServerKmp

./: .gitignore  PLAN.md  README.MD  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  screenshots.yml
app/androidApp/: build.gradle.kts
app/androidApp/src/androidTest/kotlin/io/ollama/server/android/: AppAndroidTest.kt
app/androidApp/src/main/: AndroidManifest.xml
app/androidApp/src/main/cpp/: CMakeLists.txt
app/androidApp/src/main/kotlin/io/ollama/server/android/: AppActivity.kt
buildSrc/src/main/kotlin/: ScreenshotJobsMatrix.kt
convention-plugin-multiplatform/src/main/kotlin/: composeMultiplatformConvention.gradle.kts
core/coreCommon/: build.gradle.kts
core/coreCommon/src/androidMain/kotlin/io/ollama/server/core/common/: DispatcherSetAndroid.kt  PlatformServiceAndroid.kt
core/coreCommon/src/commonMain/kotlin/io/ollama/server/core/common/: CoreCommonCommonModule.kt  DispatcherSet.kt  PlatformService.kt
core/coreCommon/src/iosMain/kotlin/io/ollama/server/core/common/: DispatcherSetIos.kt  PlatformServiceIos.kt
core/coreOllama/: build.gradle.kts
core/coreOllama/src/androidMain/: AndroidManifest.xml
core/coreOllama/src/androidMain/kotlin/io/ollama/server/core/ollama/: AndroidOllamaServerController.kt  OllamaBootReceiver.kt  OllamaForegroundService.kt
core/coreOllama/src/commonMain/kotlin/io/ollama/server/core/ollama/: CoreOllamaCommonModule.kt  OllamaApiClient.kt  OllamaApiClientImpl.kt  OllamaModel.kt  OllamaServerController.kt  ServerStatus.kt
core/coreOllama/src/iosMain/kotlin/io/ollama/server/core/ollama/: IosOllamaServerController.kt
core/corePref/: build.gradle.kts
core/corePref/src/androidHostTest/kotlin/io/ollama/server/core/pref/: TestCorePrefModuleFactory.kt
core/corePref/src/commonMain/kotlin/io/ollama/server/core/pref/: CorePrefCommonModule.kt  PrefData.kt  PrefSerializer.kt  PrefService.kt  PrefServiceDataStore.kt  StorageProvider.kt
core/corePref/src/commonTest/kotlin/io/ollama/server/core/pref/: CorePrefCommonTestModule.kt  PrefServiceCommonTest.kt  TestKoinApplication.kt
core/corePref/src/iosTest/kotlin/io/ollama/server/core/pref/: TestCorePrefModuleFactory.kt
core/coreServer/: build.gradle.kts
diApp/: build.gradle.kts
diApp/src/androidHostTest/kotlin/io/ollama/server/di/: KoinAppAndroidTest.kt
diApp/src/androidMain/kotlin/io/ollama/server/di/: AppStorageProviderAndroid.kt
diApp/src/commonMain/kotlin/io/ollama/server/di/: DiCommonModule.kt  DiKoinApplication.kt  KoinApp.kt
diApp/src/commonTest/kotlin/io/ollama/server/di/: KoinAppCommonTest.kt
diApp/src/iosMain/kotlin/: Main.kt
diApp/src/iosMain/kotlin/io/ollama/server/di/: AppStorageProviderIos.kt  KoinIos.kt
diApp/src/iosTest/kotlin/io/ollama/server/di/: KoinAppIosTest.kt
feature/featureChat/: build.gradle.kts
feature/featureModels/: build.gradle.kts
feature/featureModels/src/androidHostTest/kotlin/io/ollama/server/feature/models/: ModelsScreenAndroidTest.kt
feature/featureModels/src/commonMain/kotlin/io/ollama/server/feature/models/: ModelsCommonModule.kt  ModelsNavigationCallback.kt  ModelsScreen.kt  ModelsViewEvent.kt  ModelsViewModel.kt  ModelsViewState.kt
feature/featureModels/src/commonTest/kotlin/io/ollama/server/feature/models/: ModelsScreenCommonTest.kt
feature/featureModels/src/iosTest/kotlin/io/ollama/server/feature/models/: ModelsScreenIosTest.kt
feature/featureServer/: build.gradle.kts
feature/featureServer/src/androidHostTest/kotlin/io/ollama/server/feature/server/: ServerScreenAndroidTest.kt
feature/featureServer/src/commonMain/kotlin/io/ollama/server/feature/server/: ServerCommonModule.kt  ServerNavigationCallback.kt  ServerScreen.kt  ServerViewEvent.kt  ServerViewModel.kt  ServerViewState.kt
feature/featureServer/src/commonTest/kotlin/io/ollama/server/feature/server/: ServerScreenCommonTest.kt
feature/featureServer/src/iosTest/kotlin/io/ollama/server/feature/server/: ServerScreenIosTest.kt
feature/featureSettings/: build.gradle.kts
feature/featureSettings/src/androidHostTest/kotlin/io/ollama/server/feature/settings/: SettingsScreenAndroidTest.kt
gradle/: libs.versions.toml
navigation/: build.gradle.kts
navigation/src/commonMain/kotlin/io/ollama/server/navigation/: AppNavigation.kt  AppRoutes.kt  NavApp.kt  NavigationCommonModule.kt
scripts/: build_llamacpp_ios.sh  build_ollama_android.sh
ui/uiCommon/: build.gradle.kts
ui/uiCommon/src/commonMain/composeResources/values/: strings.xml
ui/uiMain/: build.gradle.kts
ui/uiSplash/: build.gradle.kts
(+28 files in other folders)
